Fixes for post, like a big text as content from post couldn't be visible

--- a/static/css/post.css
+++ b/static/css/post.css
@@ -51,6 +51,11 @@
     font-size: 1rem;
     color: #444;
     margin-bottom: 10px;
+	word-wrap: break-word;
+	white-space: pre-wrap;
+	max-height: 300px;
+	overflow-y: auto;
+	padding-right: 5px;
 }
 
 .post-image {
